--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">= 17"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node -- ./src/index.js",
+    "start": "npm run gen && nodemon --exec babel-node -- ./src/index.js",
     "build": "parcel build src/index.js",
     "test": "jest",
     "lint": "eslint ./src --ext .js",
